src/test/ui/consts/issue-52443.stderr
error[E0308]: mismatched types
  --> $DIR/issue-52443.rs:2:10
   |
LL |     [(); & { loop { continue } } ];
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |          |
   |          expected usize, found reference
   |          help: consider removing the borrow: `{ loop { continue } }`
   |
   = note: expected type `usize`
              found type `&_`

error[E0308]: mismatched types
  --> $DIR/issue-52443.rs:3:17
   |
LL |     [(); loop { break }];
   |                 ^^^^^ expected (), found usize
   |
   = note: expected type `()`
              found type `usize`

error[E0019]: constant contains unimplemented expression type
  --> $DIR/issue-52443.rs:4:11
   |
LL |     [(); {while true {break}; 0}];
   |           ^^^^^^^^^^^^^^^^^^

error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-52443.rs:5:21
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |                     ^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/issue-52443.rs:5:21
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |                     ^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/issue-52443.rs:5:12
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52443.rs:5:21
   |
LL |     [(); { for _ in 0usize.. {}; 0}];
   |                     ^^^^^^^^ calling non-const function `<std::ops::RangeFrom<usize> as std::iter::IntoIterator>::into_iter`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0015, E0019, E0080, E0308.
For more information about an error, try `rustc --explain E0015`.
